@@ -1,9 +1,10 @@
 Revision history for Mojolicious-Plugin-Credentials
 
 {{$NEXT}}
+          - Fix typo in MOJO_CREDENTIALS_KEYS handling
 
 0.004     2024-01-31 23:26:37+01:00 Europe/Brussels
-          - Add suppor for MOJO_CREDENTIALS_DIR environmental variable
+          - Add support for MOJO_CREDENTIALS_DIR environmental variable
 
 0.003     2024-01-31 22:22:02+01:00 Europe/Brussels
           - Add --editor flag to credentials edit
